workspace/log/build_2023-10-09_20-14-55/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:93:62: error: redeclaration of ‘rclcpp::Client<mavros_msgs::srv::CommandBool>::SharedPtr TemplateDroneControl::arming_client_’
   93 |     rclcpp::Client<mavros_msgs::srv::CommandBool>::SharedPtr arming_client_;
      |                                                              ^~~~~~~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:90:62: note: previous declaration ‘rclcpp::Client<mavros_msgs::srv::CommandBool>::SharedPtr TemplateDroneControl::arming_client_’
   90 |     rclcpp::Client<mavros_msgs::srv::CommandBool>::SharedPtr arming_client_;
      |                                                              ^~~~~~~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:47:34: error: expected ‘;’ before ‘do’
   47 |         send_arming_request(true)
      |                                  ^
      |                                  ;
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:40,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_arming_request(bool)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:82:107: error: request for member ‘c_str’ in ‘((const std::__shared_ptr_access<mavros_msgs::srv::CommandBool_Response_<std::allocator<void> >, __gnu_cxx::_S_atomic, false, false>*)(& result_future.std::shared_future<std::shared_ptr<mavros_msgs::srv::CommandBool_Response_<std::allocator<void> > > >::get()))->std::__shared_ptr_access<mavros_msgs::srv::CommandBool_Response_<std::allocator<void> >, __gnu_cxx::_S_atomic, false, false>::operator->()->mavros_msgs::srv::CommandBool_Response_<std::allocator<void> >::result’, which is of non-class type ‘mavros_msgs::srv::CommandBool_Response_<std::allocator<void> >::_result_type’ {aka ‘unsigned char’}
   82 |                 RCLCPP_ERROR(this->get_logger(), "Arming request denied: %s", result_future.get()->result.c_str());
      |                                                                                                           ^~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
